--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,19 @@
 /*  your css code here. If applicable */
+#box{
+	color:#2a7ae2;
+}
+#box2{
+	color: #f44336;
+}
+#box3{
+	color: #4caf50 ;
+}
+#box4{
+	color:  #ff9800;
+}
+#box5{
+	color:#607d8b ;
+}
+#box6{
+	color:  #ffeb3b;
+}
